second shrey edited rigt now changedcommit

--- a/index.html
+++ b/index.html
@@ -42,4 +42,5 @@ fetch(request)
         .catch(error => {
             console.error('Error:', error);
         });
+        second commit is here
 </script>
