thirdis now updated commit

--- a/index.html
+++ b/index.html
@@ -43,4 +43,5 @@ fetch(request)
             console.error('Error:', error);
         });
         second commit is here
+        third commit is here
 </script>
